syntax = "proto3";

package common;

option go_package = "application/api/proto/common";

import "google/protobuf/any.proto";

// Common message types used across services
message Response {
    int32 code = 1;
    string message = 2;
    google.protobuf.Any data = 3;
}

message PaginationRequest {
    int32 page = 1;
    int32 limit = 2;
}

message PaginationResponse {
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;
    int32 total_pages = 4;
}

message Empty {}
