syntax = "proto3";

package user;

option go_package = "application/api/proto/user";

import "api/proto/common/types.proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (UserResponse);
    rpc GetUser(GetUserRequest) returns (UserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (common.Response);
    rpc ListUsers(common.PaginationRequest) returns (ListUsersResponse);
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
}

message GetUserRequest {
    string id = 1;
}

message UpdateUserRequest {
    string id = 1;
    string username = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
}

message DeleteUserRequest {
    string id = 1;
}

message UserResponse {
    User user = 1;
}

message ListUsersResponse {
    repeated User users = 1;
    common.PaginationResponse pagination = 2;
}
